# diesel_on_lambda

./: .gitignore  Cargo.toml  README.md
.cargo/: config
migrations/2021-09-22-092046_create_user_table/: up.sql
src/: lib.rs  models.rs  schema.rs
